--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -341,9 +341,9 @@
     "df_1 = tables[0]\n",
     "df_2 = tables[1]\n",
     "mars_df = pd.concat([df_1, df_2])\n",
-    "mars_df.columns = ['', 'Mars', 'Earth']\n",
+    "mars_df.columns = ['Description', 'Mars', 'Earth']\n",
     "mars_df = mars_df.iloc[1:]\n",
-    "mars_df.set_index('', inplace=True)\n",
+    "mars_df.set_index('Description', inplace=True)\n",
     "mars_df.head(20)"
    ]
   },
