--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -38,9 +38,10 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 100.0.4896\n",
-      "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
-      "Driver [C:\\Users\\hk_la\\.wdm\\drivers\\chromedriver\\win32\\100.0.4896.60\\chromedriver.exe] found in cache\n"
+      "Current google-chrome version is 101.0.4951\n",
+      "Get LATEST chromedriver version for 101.0.4951 google-chrome\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/101.0.4951.41/chromedriver_win32.zip\n",
+      "Driver has been saved in cache [C:\\Users\\hk_la\\.wdm\\drivers\\chromedriver\\win32\\101.0.4951.41]\n"
      ]
     }
    ],
@@ -66,8 +67,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lastest News Title: NASA's Perseverance Mars Rover Gets Balanced\n",
-      "Article Preview: The mission team performed a crucial weight-balancing test on the rover in preparation for this summer's history-making launch to the Red Planet.\n"
+      "Lastest News Title: NASA's Mars 2020 Rover Completes Its First Drive\n",
+      "Article Preview: In a 10-plus-hour marathon, the rover steered, turned and drove in 3-foot (1-meter) increments over small ramps.\n"
      ]
     }
    ],
@@ -117,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://spaceimages-mars.com/image/featured/mars1.jpg\n"
+      "https://spaceimages-mars.com/image/featured/mars2.jpg\n"
      ]
     }
    ],
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "id": "0464b1d7",
    "metadata": {},
    "outputs": [
@@ -164,7 +165,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "id": "c4c8b9a1",
    "metadata": {},
    "outputs": [
@@ -187,7 +188,7 @@
        "list"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "id": "4d3a7613",
    "metadata": {},
    "outputs": [
@@ -223,88 +224,99 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Description</th>\n",
        "      <th>Mars</th>\n",
        "      <th>Earth</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Diameter:</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Diameter:</td>\n",
        "      <td>6,779 km</td>\n",
        "      <td>12,742 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mass:</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Mass:</td>\n",
        "      <td>6.39 × 10^23 kg</td>\n",
        "      <td>5.97 × 10^24 kg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Moons:</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Moons:</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Distance from Sun:</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Distance from Sun:</td>\n",
        "      <td>227,943,824 km</td>\n",
        "      <td>149,598,262 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Length of Year:</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Length of Year:</td>\n",
        "      <td>687 Earth days</td>\n",
        "      <td>365.24 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Temperature:</th>\n",
+       "      <th>5</th>\n",
+       "      <td>Temperature:</td>\n",
        "      <td>-87 to -5 °C</td>\n",
        "      <td>-88 to 58°C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Equatorial Diameter:</th>\n",
+       "      <th>6</th>\n",
+       "      <td>Equatorial Diameter:</td>\n",
        "      <td>6,792 km</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Polar Diameter:</th>\n",
+       "      <th>7</th>\n",
+       "      <td>Polar Diameter:</td>\n",
        "      <td>6,752 km</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mass:</th>\n",
+       "      <th>8</th>\n",
+       "      <td>Mass:</td>\n",
        "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Moons:</th>\n",
+       "      <th>9</th>\n",
+       "      <td>Moons:</td>\n",
        "      <td>2 ( Phobos &amp; Deimos )</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Orbit Distance:</th>\n",
+       "      <th>10</th>\n",
+       "      <td>Orbit Distance:</td>\n",
        "      <td>227,943,824 km (1.38 AU)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Orbit Period:</th>\n",
+       "      <th>11</th>\n",
+       "      <td>Orbit Period:</td>\n",
        "      <td>687 days (1.9 years)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Surface Temperature:</th>\n",
+       "      <th>12</th>\n",
+       "      <td>Surface Temperature:</td>\n",
        "      <td>-87 to -5 °C</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>First Record:</th>\n",
+       "      <th>13</th>\n",
+       "      <td>First Record:</td>\n",
        "      <td>2nd millennium BC</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Recorded By:</th>\n",
+       "      <th>14</th>\n",
+       "      <td>Recorded By:</td>\n",
        "      <td>Egyptian astronomers</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -313,26 +325,25 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               Mars            Earth\n",
-       "                                                                    \n",
-       "Diameter:                                  6,779 km        12,742 km\n",
-       "Mass:                               6.39 × 10^23 kg  5.97 × 10^24 kg\n",
-       "Moons:                                            2                1\n",
-       "Distance from Sun:                   227,943,824 km   149,598,262 km\n",
-       "Length of Year:                      687 Earth days      365.24 days\n",
-       "Temperature:                           -87 to -5 °C      -88 to 58°C\n",
-       "Equatorial Diameter:                       6,792 km              NaN\n",
-       "Polar Diameter:                            6,752 km              NaN\n",
-       "Mass:                 6.39 × 10^23 kg (0.11 Earths)              NaN\n",
-       "Moons:                        2 ( Phobos & Deimos )              NaN\n",
-       "Orbit Distance:            227,943,824 km (1.38 AU)              NaN\n",
-       "Orbit Period:                  687 days (1.9 years)              NaN\n",
-       "Surface Temperature:                   -87 to -5 °C              NaN\n",
-       "First Record:                     2nd millennium BC              NaN\n",
-       "Recorded By:                   Egyptian astronomers              NaN"
+       "             Description                           Mars            Earth\n",
+       "0              Diameter:                       6,779 km        12,742 km\n",
+       "1                  Mass:                6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "2                 Moons:                              2                1\n",
+       "3     Distance from Sun:                 227,943,824 km   149,598,262 km\n",
+       "4        Length of Year:                 687 Earth days      365.24 days\n",
+       "5           Temperature:                   -87 to -5 °C      -88 to 58°C\n",
+       "6   Equatorial Diameter:                       6,792 km              NaN\n",
+       "7        Polar Diameter:                       6,752 km              NaN\n",
+       "8                  Mass:  6.39 × 10^23 kg (0.11 Earths)              NaN\n",
+       "9                 Moons:          2 ( Phobos & Deimos )              NaN\n",
+       "10       Orbit Distance:       227,943,824 km (1.38 AU)              NaN\n",
+       "11         Orbit Period:           687 days (1.9 years)              NaN\n",
+       "12  Surface Temperature:                   -87 to -5 °C              NaN\n",
+       "13         First Record:              2nd millennium BC              NaN\n",
+       "14          Recorded By:           Egyptian astronomers              NaN"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,8 +354,65 @@
     "mars_df = pd.concat([df_1, df_2])\n",
     "mars_df.columns = ['Description', 'Mars', 'Earth']\n",
     "mars_df = mars_df.iloc[1:]\n",
-    "mars_df.set_index('Description', inplace=True)\n",
+    "mars_df= mars_df.reset_index(drop=True)\n",
     "mars_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "c8990761",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Description': 'Diameter:', 'Mars': '6,779 km', 'Earth': '12,742 km'},\n",
+       " {'Description': 'Mass:',\n",
+       "  'Mars': '6.39 × 10^23 kg',\n",
+       "  'Earth': '5.97 × 10^24 kg'},\n",
+       " {'Description': 'Moons:', 'Mars': '2', 'Earth': '1'},\n",
+       " {'Description': 'Distance from Sun:',\n",
+       "  'Mars': '227,943,824 km',\n",
+       "  'Earth': '149,598,262 km'},\n",
+       " {'Description': 'Length of Year:',\n",
+       "  'Mars': '687 Earth days',\n",
+       "  'Earth': '365.24 days'},\n",
+       " {'Description': 'Temperature:',\n",
+       "  'Mars': '-87 to -5 °C',\n",
+       "  'Earth': '-88 to 58°C'},\n",
+       " {'Description': 'Equatorial Diameter:', 'Mars': '6,792 km', 'Earth': nan},\n",
+       " {'Description': 'Polar Diameter:', 'Mars': '6,752 km', 'Earth': nan},\n",
+       " {'Description': 'Mass:',\n",
+       "  'Mars': '6.39 × 10^23 kg (0.11 Earths)',\n",
+       "  'Earth': nan},\n",
+       " {'Description': 'Moons:', 'Mars': '2 ( Phobos & Deimos )', 'Earth': nan},\n",
+       " {'Description': 'Orbit Distance:',\n",
+       "  'Mars': '227,943,824 km (1.38 AU)',\n",
+       "  'Earth': nan},\n",
+       " {'Description': 'Orbit Period:',\n",
+       "  'Mars': '687 days (1.9 years)',\n",
+       "  'Earth': nan},\n",
+       " {'Description': 'Surface Temperature:', 'Mars': '-87 to -5 °C', 'Earth': nan},\n",
+       " {'Description': 'First Record:', 'Mars': '2nd millennium BC', 'Earth': nan},\n",
+       " {'Description': 'Recorded By:', 'Mars': 'Egyptian astronomers', 'Earth': nan}]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "len(mars_df)\n",
+    "mars_table = []\n",
+    "for i in np.arange(len(mars_df)):\n",
+    "    mars_desc = mars_df['Description'][i]\n",
+    "    mars_val = mars_df['Mars'][i]\n",
+    "    earth_val = mars_df['Earth'][i]\n",
+    "    mars_table.append({'Description': mars_desc, 'Mars': mars_val, 'Earth': earth_val})\n",
+    "mars_table"
    ]
   },
   {
@@ -357,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a7344ae5",
    "metadata": {},
    "outputs": [],
@@ -374,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "c30efd44",
    "metadata": {},
    "outputs": [
@@ -391,7 +459,7 @@
        "  'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f9eebe95",
    "metadata": {},
    "outputs": [],
@@ -427,8 +495,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "216415b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flask import Flask, render_template, redirect\n",
+    "from flask_pymongo import PyMongo\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient(\"mongodb://localhost:27017/\")\n",
+    "db = client.mission_to_mars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1666e014",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mission_to_mars = db.collection.find()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "87549b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diameter:\n",
+      "Mass:\n",
+      "Moons:\n",
+      "Distance from Sun:\n",
+      "Length of Year:\n",
+      "Temperature:\n",
+      "Equatorial Diameter:\n",
+      "Polar Diameter:\n",
+      "Mass:\n",
+      "Moons:\n",
+      "Orbit Distance:\n",
+      "Orbit Period:\n",
+      "Surface Temperature:\n",
+      "First Record:\n",
+      "Recorded By:\n"
+     ]
+    }
+   ],
+   "source": [
+    "for each_item in collection.find():\n",
+    "    for each_element in each_item['mars_table']['Description']:\n",
+    "        print(each_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "acb2278d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.cursor.Cursor at 0x1b30f5150a0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection.find()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "1498601d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16184/1747457546.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#         printdata = each_element[\"Description\"]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{i}: {each_element[\"Description\"]}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
+     ]
+    }
+   ],
+   "source": [
+    "mission_to_mars = db.collection.find()\n",
+    "i = 0\n",
+    "for data in mission_to_mars:\n",
+    "    for each_element in data['mars_table']:\n",
+    "        i = i + 1\n",
+    "#         printdata = each_element[\"Description\"]\n",
+    "        print(f'{i}: {each_element[\"Description\"]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efb55975",
    "metadata": {},
    "outputs": [],
    "source": []
