--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -40,8 +40,7 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 101.0.4951\n",
       "Get LATEST chromedriver version for 101.0.4951 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/101.0.4951.41/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\hk_la\\.wdm\\drivers\\chromedriver\\win32\\101.0.4951.41]\n"
+      "Driver [C:\\Users\\hk_la\\.wdm\\drivers\\chromedriver\\win32\\101.0.4951.41\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -67,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lastest News Title: NASA's Mars 2020 Rover Completes Its First Drive\n",
-      "Article Preview: In a 10-plus-hour marathon, the rover steered, turned and drove in 3-foot (1-meter) increments over small ramps.\n"
+      "Lastest News Title: Common Questions about InSight's 'Mole'\n",
+      "Article Preview: The following Q&As with members of the team answer some of the most common questions about the burrowing device, part of a science instrument called the Heat Flow and Physical Properties Package (HP3).\n"
      ]
     }
    ],
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "0464b1d7",
    "metadata": {},
    "outputs": [
@@ -165,7 +164,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "c4c8b9a1",
    "metadata": {},
    "outputs": [
@@ -188,7 +187,7 @@
        "list"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "id": "4d3a7613",
    "metadata": {},
    "outputs": [
@@ -343,7 +342,7 @@
        "14          Recorded By:           Egyptian astronomers              NaN"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,63 +358,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 109,
-   "id": "c8990761",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Description': 'Diameter:', 'Mars': '6,779 km', 'Earth': '12,742 km'},\n",
-       " {'Description': 'Mass:',\n",
-       "  'Mars': '6.39 × 10^23 kg',\n",
-       "  'Earth': '5.97 × 10^24 kg'},\n",
-       " {'Description': 'Moons:', 'Mars': '2', 'Earth': '1'},\n",
-       " {'Description': 'Distance from Sun:',\n",
-       "  'Mars': '227,943,824 km',\n",
-       "  'Earth': '149,598,262 km'},\n",
-       " {'Description': 'Length of Year:',\n",
-       "  'Mars': '687 Earth days',\n",
-       "  'Earth': '365.24 days'},\n",
-       " {'Description': 'Temperature:',\n",
-       "  'Mars': '-87 to -5 °C',\n",
-       "  'Earth': '-88 to 58°C'},\n",
-       " {'Description': 'Equatorial Diameter:', 'Mars': '6,792 km', 'Earth': nan},\n",
-       " {'Description': 'Polar Diameter:', 'Mars': '6,752 km', 'Earth': nan},\n",
-       " {'Description': 'Mass:',\n",
-       "  'Mars': '6.39 × 10^23 kg (0.11 Earths)',\n",
-       "  'Earth': nan},\n",
-       " {'Description': 'Moons:', 'Mars': '2 ( Phobos & Deimos )', 'Earth': nan},\n",
-       " {'Description': 'Orbit Distance:',\n",
-       "  'Mars': '227,943,824 km (1.38 AU)',\n",
-       "  'Earth': nan},\n",
-       " {'Description': 'Orbit Period:',\n",
-       "  'Mars': '687 days (1.9 years)',\n",
-       "  'Earth': nan},\n",
-       " {'Description': 'Surface Temperature:', 'Mars': '-87 to -5 °C', 'Earth': nan},\n",
-       " {'Description': 'First Record:', 'Mars': '2nd millennium BC', 'Earth': nan},\n",
-       " {'Description': 'Recorded By:', 'Mars': 'Egyptian astronomers', 'Earth': nan}]"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "len(mars_df)\n",
-    "mars_table = []\n",
-    "for i in np.arange(len(mars_df)):\n",
-    "    mars_desc = mars_df['Description'][i]\n",
-    "    mars_val = mars_df['Mars'][i]\n",
-    "    earth_val = mars_df['Earth'][i]\n",
-    "    mars_table.append({'Description': mars_desc, 'Mars': mars_val, 'Earth': earth_val})\n",
-    "mars_table"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "eb48f65f",
    "metadata": {},
@@ -425,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a7344ae5",
    "metadata": {},
    "outputs": [],
@@ -442,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c30efd44",
    "metadata": {},
    "outputs": [
@@ -459,7 +401,7 @@
        "  'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,129 +427,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f9eebe95",
    "metadata": {},
    "outputs": [],
    "source": [
     "browser.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "216415b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from flask import Flask, render_template, redirect\n",
-    "from flask_pymongo import PyMongo\n",
-    "from pymongo import MongoClient\n",
-    "\n",
-    "client = MongoClient(\"mongodb://localhost:27017/\")\n",
-    "db = client.mission_to_mars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "1666e014",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mission_to_mars = db.collection.find()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "87549b60",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Diameter:\n",
-      "Mass:\n",
-      "Moons:\n",
-      "Distance from Sun:\n",
-      "Length of Year:\n",
-      "Temperature:\n",
-      "Equatorial Diameter:\n",
-      "Polar Diameter:\n",
-      "Mass:\n",
-      "Moons:\n",
-      "Orbit Distance:\n",
-      "Orbit Period:\n",
-      "Surface Temperature:\n",
-      "First Record:\n",
-      "Recorded By:\n"
-     ]
-    }
-   ],
-   "source": [
-    "for each_item in collection.find():\n",
-    "    for each_element in each_item['mars_table']['Description']:\n",
-    "        print(each_element)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "acb2278d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.cursor.Cursor at 0x1b30f5150a0>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "collection.find()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "1498601d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16184/1747457546.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#         printdata = each_element[\"Description\"]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{i}: {each_element[\"Description\"]}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
-     ]
-    }
-   ],
-   "source": [
-    "mission_to_mars = db.collection.find()\n",
-    "i = 0\n",
-    "for data in mission_to_mars:\n",
-    "    for each_element in data['mars_table']:\n",
-    "        i = i + 1\n",
-    "#         printdata = each_element[\"Description\"]\n",
-    "        print(f'{i}: {each_element[\"Description\"]}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efb55975",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
