file cleanup - remove strReplace

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -421,7 +421,7 @@
     "    hemisphere_title = soup.find('h2', class_='title').text\n",
     "    hemisphere_img_url = mars_hemp_url + soup.find_all('img')[4]['src']\n",
     "        \n",
-    "    hemisphere_image_urls.append({'title': hemisphere_title.replace(\" Enhanced\", ''), 'img_url': hemisphere_img_url})   \n",
+    "    hemisphere_image_urls.append({'title': hemisphere_title, 'img_url': hemisphere_img_url})   \n",
     "hemisphere_image_urls\n"
    ]
   },
